# gclaw

./: .gitignore  Cargo.toml  FEISHU_ADAPTER.md  README.md  README_COMMANDS.md  ROADMAP.md  WINDOWS_README.md  config.example.json  config.minimal.json  config.modelscope.json
cmd/: main.go
crates/gclaw-core/: Cargo.toml
crates/gclaw-core/src/: error.rs  lib.rs  types.rs
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: CLI_GUIDE.md  MODELSCOPE_INTEGRATION.md  OPTIMIZATION.md  SANDBOX_ENHANCEMENT.md  feishu-integration.md
gclaw/: go.mod
gclaw/cmd/: main.go
gclaw/docs/: MCP_INTEGRATION.md
gclaw/internal/adapters/feishu/: server.go
gclaw/internal/config/: config.go
gclaw/internal/memory/: memory.go
gclaw/internal/provider/: provider.go
gclaw/pkg/errors/: errors.go
internal/adapters/feishu/: feishu.go
internal/cache/: multi_level_cache.go
internal/config/: config.go
internal/engine/: engine.go
internal/memory/: enhanced_memory.go
internal/monitor/: metrics.go
internal/provider/: modelscope.go  provider.go
internal/security/: manager.go
internal/skill/: plugin_builder.go  plugin_loader.go  registry.go  sandbox.go  sandbox_enhanced.go  sandbox_test.go  scanners.go  skill_test.go  third_party_scanners.go
internal/tools/: feishu.go  tools.go
pkg/errors/: errors.go
pkg/mcp/: client.go  types.go
pkg/types/: types.go
