[package]
name = "gclaw-core"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
